objects/ssot__EmailMessage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementNumber__c</fullName>
        <label>Channel Engagement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryRegion__c</fullName>
        <label>Country Region</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDateTime__c</fullName>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailHeaderText__c</fullName>
        <label>Email Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessageText__c</fullName>
        <label>Email Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessage_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>EmailMessage_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>EmailMessage_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessage_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>EmailMessage_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>EmailMessage_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__EmailStatus__c</fullName>
        <label>Email Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailSubjectText__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailThreadId__c</fullName>
        <label>Email Thread</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalBCCEmailAddressListText__c</fullName>
        <label>External BCC Email Address List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstOpenDateTime__c</fullName>
        <label>First Open DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FromAddress__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HTMLBodyText__c</fullName>
        <label>HTML Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasRelatedDocument__c</fullName>
        <label>Has Related Document</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Message Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalBccEmailAddressListText__c</fullName>
        <label>Internal BCC Email Address List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalCCEmailAddressListText__c</fullName>
        <label>Internal CC Email Address List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBounced__c</fullName>
        <label>Is Bounced</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIncoming__c</fullName>
        <label>Is Incoming</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOpened__c</fullName>
        <label>Is Opened</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrivateDraft__c</fullName>
        <label>Is Private Draft</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTracked__c</fullName>
        <label>Is Tracked</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestOpenDateTime__c</fullName>
        <label>Latest Open DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivity__c</fullName>
        <label>Market Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessageDate__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessagePurpose__c</fullName>
        <label>Message Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReplyToAddress__c</fullName>
        <label>Reply To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReplyToEmailMessageId__c</fullName>
        <label>Reply To Email Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplication__c</fullName>
        <label>Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ToEmailAddressListText__c</fullName>
        <label>To Email Address List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226877_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage_RelatedToId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EmailMessage_RelatedToId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1697761226877_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761230324_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage_LastModifiedById_map_Us_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>EmailMessage_LastModifiedById_map_Us_rel</relationshipLabel>
        <relationshipName>rel_1697761230324_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549031408_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailMessage_ChannelEngagementId_map_rel</label>
        <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
        <relationshipLabel>EmailMessage_ChannelEngagementId_map_rel</relationshipLabel>
        <relationshipName>rel_1718549031408_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>